# prettycode

./: README.md  README.txt  pyproject.toml
prettycode/: __init__.py  backgrounds.py  colors.py  fonts.py
